// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchLayout renders with initial state 1`] = `
<Row
  className="__SearchLayout__"
  gutter={32}
  justify="start"
  type="flex"
>
  <Col
    lg={8}
    xl={7}
    xs={0}
    xxl={5}
  >
    <ResponsiveView
      min="lg"
      render={[Function]}
    />
  </Col>
  <Col
    lg={16}
    xl={16}
    xs={24}
    xxl={14}
  >
    <LoadingOrChildren
      loading={false}
    >
      <Row
        align="middle"
        gutter={0}
        justify="end"
        type="flex"
      >
        <Col
          lg={12}
          xs={24}
        >
          <Connect(NumberOfResults) />
        </Col>
        <Col
          lg={0}
          xs={12}
        >
          <ResponsiveView
            max="md"
            render={[Function]}
          />
        </Col>
        <Col
          className="tr"
          span={12}
        >
          <SortByContainer />
        </Col>
      </Row>
      <Row
        gutter={0}
      >
        <Col
          span={24}
        >
          <Connect(SearchResults)
            renderItem={[MockFunction]}
          />
          <Connect(SearchPagination) />
        </Col>
      </Row>
    </LoadingOrChildren>
  </Col>
</Row>
`;

exports[`SearchLayout renders with loading states true 1`] = `
<Row
  className="__SearchLayout__"
  gutter={32}
  justify="start"
  type="flex"
>
  <Col
    lg={8}
    xl={7}
    xs={0}
    xxl={5}
  >
    <ResponsiveView
      min="lg"
      render={[Function]}
    />
  </Col>
  <Col
    lg={16}
    xl={16}
    xs={24}
    xxl={14}
  >
    <LoadingOrChildren
      loading={false}
    >
      <Row
        align="middle"
        gutter={0}
        justify="end"
        type="flex"
      >
        <Col
          lg={12}
          xs={24}
        >
          <Connect(NumberOfResults) />
        </Col>
        <Col
          lg={0}
          xs={12}
        >
          <ResponsiveView
            max="md"
            render={[Function]}
          />
        </Col>
        <Col
          className="tr"
          span={12}
        >
          <SortByContainer />
        </Col>
      </Row>
      <Row
        gutter={0}
      >
        <Col
          span={24}
        >
          <Connect(SearchResults)
            renderItem={[MockFunction]}
          />
          <Connect(SearchPagination) />
        </Col>
      </Row>
    </LoadingOrChildren>
  </Col>
</Row>
`;

exports[`SearchLayout renders without aggregations 1`] = `
<Row
  className="__SearchLayout__"
  gutter={32}
  justify="start"
  type="flex"
>
  <Col
    lg={8}
    xl={7}
    xs={0}
    xxl={5}
  />
  <Col
    lg={16}
    xl={16}
    xs={24}
    xxl={14}
  >
    <LoadingOrChildren
      loading={false}
    >
      <Row
        align="middle"
        gutter={0}
        justify="end"
        type="flex"
      >
        <Col
          lg={12}
          xs={24}
        >
          <Connect(NumberOfResults) />
        </Col>
        <Col
          lg={0}
          xs={12}
        >
          <ResponsiveView
            max="md"
            render={[Function]}
          />
        </Col>
        <Col
          className="tr"
          span={12}
        >
          <SortByContainer />
        </Col>
      </Row>
      <Row
        gutter={0}
      >
        <Col
          span={24}
        >
          <Connect(SearchResults)
            renderItem={[MockFunction]}
          />
          <Connect(SearchPagination) />
        </Col>
      </Row>
    </LoadingOrChildren>
  </Col>
</Row>
`;
